Selection API: type attribute should return 'Range' for range-selection in text controls.

This fixes a regression since Google Chrome 58. New behavior is compatible with
WebKit and Edge. Firefox doesn't have 'type' attribute.

Implementation:
SelectionTemplate<T>::IsCaret() and IsRange() should take care of granularity.

BUG=712579

Review-Url: https://codereview.chromium.org/2835063002
Cr-Commit-Position: refs/heads/master@{#466927}

Former-commit-id: ddf851a7d72103c0062bebeb3d3af42b9d5b5c6d