third_party/WebKit/Source/core/editing/DOMSelection.cpp
@@ -205,7 +205,9 @@ String DOMSelection::type() const {
   // http://msdn.microsoft.com/en-us/library/ms534692(VS.85).aspx
   if (rangeCount() == 0)
     return "None";
-  if (isCollapsed())
+  // Do not use isCollapsed() here. We'd like to return "Range" for
+  // range-selection in text control elements.
+  if (GetFrame()->Selection().GetSelectionInDOMTree().IsCaret())
     return "Caret";
   return "Range";
 }
